# TaskManager

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_alter_user_phone.py  0002_user_role.py  0003_tag_task.py  0003_user_avatar_picture.py  0004_alter_task_deadline_date_alter_task_priority_and_more.py  0004_alter_task_tags_alter_user_avatar_picture.py  0005_user_date_of_birth_user_phone_alter_user_email_and_more.py  0006_alter_user_is_staff.py  0006_remove_task_tags_task_tags.py  0007_alter_user_date_of_birth.py  0007_alter_user_is_staff.py
main/models/: __init__.py  task.py  user.py
main/services/: file_validator.py  mail.py  single_resource.py
task_manager/: settings.py  urls.py
test/: base.py  factory_base.py  test_admin.py  test_current_user.py  test_jwt.py  test_mail.py  test_permissions.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
